allprojects {
    group = 'com.aresstack.askai.java8'
    version = (findProperty('releaseVersion') ?: '0.1.0').toString()

    repositories {
        // The win-directml-java model catalog + generation runtime are consumed from the PUBLISHED
        // Maven Central release (com.aresstack:*:0.2.1). No mavenLocal / SNAPSHOT — the build must
        // resolve reproducibly on a fresh machine.
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    // The DELIBERATE Java-21 sidecar processes: the browser MCP sidecar (playwright4j is major 65)
    // and the local model runtime (win-directml-java is Java 21). Everything else stays strictly
    // Java 8; the Java-8 host never compiles against or loads sidecar classes.
    def java21Modules = [
            'browser-mcp-server-java21',
            'local-model-runtime-sidecar-java21'
    ]
    if (!(name in java21Modules)) {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}
